[bdist_wheel]
# what is this for?
# - https://packaging.python.org/en/latest/guides/distributing-packages-using-setuptools/#wheels
universal=0

[metadata]
license_file = LICENSE

[black]
line-length = 79
# exclude = '''
# /(
#     \.archive
#   | \.git
#   | examples/*
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | \.vscode
#   | _build
#   | buck-out
#   | build
#   | dist
#   | migrations
#   | site
# )/
# '''

[isort]
# make it compatible with black
profile = black
# # Make sure this matches `*.py` in .editorconfig
# ensure_newline_before_comments = true
# force_single_line = true
# lines_after_imports = 3
# include_trailing_comma = true
# use_parentheses = true

[flake8]
per-file-ignores=minichain/__init__.py: F401
max-line-length = 88
extend-ignore = E203

[darglint]
##? Source: https://github.com/terrencepreilly/darglint
## Ignore properties
ignore_properties = 1
## Ignore private methods
ignore_regex = ^_(.*)
## Use message template
# message_template = {msg_id}@{path}:{line}
## Docstring style to use:
# - google (default)
# - sphinx
# - numpy
docstring_style = google
## How strict?
# short: One-line descriptions are acceptable; anything
#        more and the docstring will be fully checked.
#
# long: One-line descriptions and descriptions without
#       arguments/returns/yields/etc. sections will be
#       allowed. Anything more, and the docstring will
#       be fully checked.
#
# full: (Default) Docstrings will be fully checked.
strictness = long
## Ignore common exceptions
# ignore_raise = ValueError,MyCustomError
## Ignore Specific Error Codes
# Example: ignore = DAR402,DAR103
#------------------------------------------------------------------------
# DAR001  # The docstring was not parsed correctly due to a syntax error.
# DAR002  # An argument/exception lacks a description
# DAR003  # A line is under-indented or over-indented.
# DAR004  # The docstring contains an extra newline where it shouldn't.
# DAR005  # The item contains a type section (parentheses), but no type.
# DAR101  # The docstring is missing a parameter in the definition.
# DAR102  # The docstring contains a parameter not in function.
# DAR103  # The docstring parameter type doesn't match function.
# DAR104  # (disabled) The docstring parameter has no type specified
# DAR105  # The docstring parameter type is malformed.
# DAR201  # The docstring is missing a return from definition.
# DAR202  # The docstring has a return not in definition.
# DAR203  # The docstring parameter type doesn't match function.
# DAR301  # The docstring is missing a yield present in definition.
# DAR302  # The docstring has a yield not in definition.
# DAR401  # The docstring is missing an exception raised.
# DAR402  # The docstring describes an exception not explicitly raised.
# DAR501  # The docstring describes a variable which is not defined.
#------------------------------------------------------------------------
ignore = DAR103

[mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[mypy-minichain]
implicit_reexport = true
[mypy-minichain.shapes]
implicit_reexport = true
